# docs/swagger.json
@@ -23,7 +23,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.HealthzResponse"
+                            "$ref": "#/definitions/views.HealthzResponse"
                         }
                     }
                 }
@@ -50,18 +50,28 @@
                     }
                 }
             }
+        },
+        "/sheets/movies/{tmdbID}/poster": {
+            "get": {
+                "produces": [
+                    "image/jpeg"
+                ],
+                "tags": [
+                    "movies"
+                ],
+                "summary": "Handle HTTP request for retrieving a movie poster from TMDB (specified by TMDB ID).",
+                "responses": {
+                    "200": {
+                        "description": "movie poster",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "handlers.HealthzResponse": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string",
-                    "example": "ok"
-                }
-            }
-        },
         "models.MovieMeta": {
             "type": "object",
             "properties": {
@@ -82,6 +92,15 @@
                 },
                 "watched": {
                     "type": "boolean"
+                }
+            }
+        },
+        "views.HealthzResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "example": "ok"
                 }
             }
         }
